Fix header-a dropdown top distance on mobile and change asset to svg

--- a/src/scss/framework/components/header/_c--nav-a.scss
+++ b/src/scss/framework/components/header/_c--nav-a.scss
@@ -5,7 +5,7 @@
         @media all and ($viewport-type: $tabletm) {
             background: map-get($color-options, c);
             position: fixed;
-            top: 77px;
+            top: 74px;
             left: 0;
             right: 0;
             height: 100%;
